# Aidants_Connect

./: .editorconfig  .env.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  all_urls.txt  biome.json  docker-compose.yml  functionnal_tests.py  manage.py  package.json  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  test_filenames.txt  test_labels.txt
.circleci/: config.yml
.github/: pull_request_template.md
README.md,ZIANE BAHADDINE +213699901296/: +213698304267
aidant_connect/: settings.py  urls.py  wsgi.py
aidant_connect_web/: apps.py  models.py  tests.py  urls.py  views.py
aidants_connect/: __init__.py  admin.py  asgi.py  celery.py  constants.py  email_backend.py  importmaps.py  postgres_url.py  settings.py  urls.py  utils.py  uvicorn_worker.py  views.py  wsgi.py
aidants_connect_common/: admin.py  apps.py  constants.py  context_processors.py  forms.py  lookups.py  middleware.py  models.py  presenters.py  signals.py  tasks.py  urls.py  views.py  widgets.py
aidants_connect_erp/: admin.py  apps.py  constants.py  models.py  signals.py  synchro_grist.py  tasks.py
aidants_connect_habilitation/: admin.py  apps.py  constants.py  forms.py  insee_utils.py  models.py  presenters.py  signals.py  tasks.py  urls.py  utils.py  views.py
aidants_connect_pico_cms/: admin.py  apps.py  constants.py  fields.py  models.py  urls.py  utils.py  views.py  widgets.py
aidants_connect_sandbox/: admin.py  apps.py  serializers.py  tests.py  urls.py  views.py
aidants_connect_web/: admin.py  (+22 more)
(+1254 files in other folders)
