[project]
requires-python = ">=3.11"

[tool.black]
force-exclude = '''
/(
    \.direnv
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | venv
    | \.svn
    | _build
    | buck-out
    | build
    | dist
    | (.+/migrations)
)/
'''

[tool.isort]
profile = "black"
src_paths = "."
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = [
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    "venv",
    ".svn",
    "_build",
    "buck-out",
    "build",
    "dist",
    "**/migrations",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/venv/*",
    "*/aidants_connect/*",
    "*/aidants_connect_web/migrations/*",
    "*/aidants_connect_web/tests/*"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
